# raytracing

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
kernels/: Cargo.toml
kernels/src/: lib.rs
shared_structs/: Cargo.toml
shared_structs/src/: geometry.rs  lib.rs  scene.rs
src/: geometry.rs  main.rs  ray_marching.rs  scene.rs  utils.rs
