[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
glam = {version = "0.29.0", features = ["core-simd", "fast-math"]} 
rand = "0.8.5"
rayon = "1.10.0"

[dev-dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
