[workspace]

members = ["kernels", "shared_structs"]

[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
shared_structs = { path = "shared_structs" }
kernels = { path = "kernels" }
bytemuck = { version = "1.13.1", features = ["derive"] }
glam = { version = "0.24.0", features = ["bytemuck"] }
wgpu = { version = "0.16.0", features = ["spirv"] }

[dev-dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }

[build-dependencies]
spirv-builder = {version = "0.9.0", features = ["watch"]}

# [profile.release]
# lto = "fat"
# opt-level = 3
# codegen-units = 1
